# wifi-captive-portal-esp-idf

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  LICENSE-beer-ware  LICENSE-public-domain  Makefile  README.md  flash-firmware-online.sh  idf.env  sdkconfig.defaults
.github/: FUNDING.yml
components/wifi-captive-portal-esp-idf-component/: .gitignore  CMakeLists.txt  Kconfig.projbuild  component.mk  wifi-captive-portal-esp-idf-dns.c  wifi-captive-portal-esp-idf-httpd.c  wifi-captive-portal-esp-idf-wifi.c  wifi-captive-portal-esp-idf.c
components/wifi-captive-portal-esp-idf-component/include/: wifi-captive-portal-esp-idf-dns.h  wifi-captive-portal-esp-idf-httpd.h  wifi-captive-portal-esp-idf-wifi.h  wifi-captive-portal-esp-idf.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
